# kalorka

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md
skills/kalorka/: SKILL.md
src/kalorka/: __init__.py  __main__.py  auth.py  cli.py  client.py  const.py  exceptions.py  models.py
tests/: conftest.py  test_auth.py  test_cli.py  test_client.py  test_models.py
tests/fixtures/: diary.json  search.json  summary.json
