[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kalorka"
version = "0.1.0"
description = "Python client and Claude Code skill for kaloricketabulky.cz (dine4fit)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "kalorka contributors" }]
keywords = ["nutrition", "kaloricketabulky", "dine4fit", "fitness", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = ["requests>=2.31"]

[project.optional-dependencies]
rich = ["rich>=13.0"]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "responses>=0.25",
    "mypy>=1.10",
    "ruff>=0.6",
    "types-requests",
]

[project.scripts]
kalorka = "kalorka.cli:main"

[project.urls]
Homepage = "https://github.com/kryvel/kalorka"
Issues = "https://github.com/kryvel/kalorka/issues"
Source = "https://github.com/kryvel/kalorka"

[tool.hatch.build.targets.wheel]
packages = ["src/kalorka"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "RUF",           # ruff-specific
    "PL",            # pylint
    "PT",            # pytest style
    "TID",           # tidy imports
    "C4",            # comprehensions
    "PIE",           # misc
]
ignore = [
    "PLR0913",  # too many arguments - many API methods have many fields
    "PLR2004",  # magic values - fine in tests
    "PLR0912",  # too many branches - rendering code is naturally branchy
    "PLC0415",  # local imports in tests are deliberate
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "PT011"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
files = ["src/kalorka"]

[[tool.mypy.overrides]]
module = ["responses.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
filterwarnings = ["error"]

[tool.coverage.run]
source = ["src/kalorka"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
